# backend2mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  tests.yml
backend2mcp/: __init__.py
backend2mcp/cli/: __init__.py
backend2mcp/core/: __init__.py  adapter.py  auth.py  exceptions.py  schema.py  server.py
backend2mcp/django/: __init__.py  adapter.py
backend2mcp/fastapi/: __init__.py  adapter.py
backend2mcp/flask/: __init__.py  adapter.py
docs/: .nojekyll  _config.yml  index.html
tests/: conftest.py  test_auth.py  test_cli.py  test_core.py  test_django.py  test_fastapi.py  test_flask.py
